--- a/index.html
+++ b/index.html
@@ -4,72 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Веб-Студия</title>
+    <title>Студия</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href=""> <span>Web</span>Studio </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio </a>
+        <ul class="site-nav">
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+      <ul class="contacts">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <!-- Решения -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <!-- Герой -->
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
       <!-- Особенности -->
-      <section>
+      <section class="section">
         <h2>Особенности</h2>
-        <ul>
-          <!--Внимание к деталям-->
+        <ul class="features">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="feature-title">Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3 class="feature-title">Пунктуальность</h3>
             <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <!--Пунктуальность-->
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="feature-title">Планирование</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <!--Планирование-->
           <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <!--Современные технологии-->
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
+            <h3 class="feature-title">Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
       <!-- Виды деятельности -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/img.jpg"
@@ -79,78 +72,47 @@
             />
           </li>
           <li>
-            <img
-              src="./images/img1.jpg"
-              alt="Дизайн интерфейса"
-              width="370"
-              height="294"
-            />
+            <img src="./images/img1.jpg" alt="Дизайн интерфейса" width="370" height="294" />
           </li>
           <li>
-            <img
-              src="./images/img2.jpg"
-              alt="Визуальное оформление"
-              width="370"
-              height="294"
-            />
+            <img src="./images/img2.jpg" alt="Визуальное оформление" width="370" height="294" />
           </li>
         </ul>
       </section>
       <!-- Команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list">
           <li>
-            <img
-              src="./images/img3.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3>Игорь Демьяненко</h3>
+            <img src="./images/img3.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+            <h3 class="list-title">Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/img4.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <h3>Ольга Репина</h3>
+            <img src="./images/img4.jpg" alt="Ольга Репина" width="270" height="260" />
+            <h3 class="list-title">Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images/img5.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3>Николай Тарасов</h3>
+            <img src="./images/img5.jpg" alt="Николай Тарасов" width="270" height="260" />
+            <h3 class="list-title">Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/img6.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <h3>Михаил Ермаков</h3>
+            <img src="./images/img6.jpg" alt="Михаил Ермаков" width="270" height="260" />
+            <h3 class="list-title">Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">
-<span>Web</span>Studio </a>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo"> <span class="logo-web">Web</span>Studio </a>
       <address>
-        <ul>
-          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+380991111111</a></li>
+        <ul class="list">
+          <li><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="mailto:info@example.com" class="footer-link">info@example.com</a></li>
+          <li><a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
